<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PatternGen3</string>
    <string name="action_settings">Settings</string>

    <string name="str_desc_image">an image</string>

    <string name="str_power_pattern">Power Pattern</string>
    <string name="str_optical_pattern">Optical Pattern</string>
    <string name="str_image_pattern">Image Pattern</string>
    
    <string name="str_color_pattern">Color Pattern</string>
    <string name="str_gray_pattern">Gray Pattern</string>
    <string name="str_xtalk_pattern">XTalk Pattern</string>
    <string name="str_flicker_pattern">Flicker Pattern</string>
    <string name="str_stick_pattern">Image Sticking Pattern</string>

    <string name="str_touch_mode">switch to TOUCH mode</string>
    <string name="str_auto_mode">switch to AUTO mode</string>

    <string name="str_gray_level">Gray Level</string>
    <string name="str_gray_31">31</string>
    <string name="str_gray_63">63</string>
    <string name="str_gray_127">127</string>

    <string name="str_response_time">Response Time</string>

    <string name="str_image_stick">Image Stick</string>

    <string name="str_hours">Hours</string>

</resources>
