<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/str_gray_level"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/myRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/gray31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_gray_31" />

        <RadioButton
            android:id="@+id/gray63"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_gray_63" />

        <RadioButton
            android:id="@+id/gray127"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_gray_127" />
    </RadioGroup>
</LinearLayout>
